# Catan

./: Board.cpp  Board.hpp  CMakeLists.txt  CardDeck.cpp  CardDeck.hpp  Catan.cpp  Catan.hpp  Catan_API.hpp  DevelopmentCard.cpp  DevelopmentCard.hpp  DevelopmentCardManagement.cpp  DevelopmentCardManagement.hpp  Edge.cpp  Edge.hpp  Makefile  Player.cpp  Player.hpp  README.md  ResourceManagement.cpp  ResourceManagement.hpp  RoadAndSettlementManagement.cpp  RoadAndSettlementManagement.hpp  Test.cpp  TestCounter.cpp  TestPlayer.hpp  Tile.cpp  Tile.hpp  Vertex.cpp  Vertex.hpp  main.cpp
